# prodcast

./: .dockerignore  .env  .pre-commit-config.yaml  Cargo.toml  README.md  config.yml  do_spec.yaml
.github/workflows/: ci.yml  general.yml
.sqlx/: query-75b730d947debcfd377a933261c883935f0c277d663cafa30e8007066ee62fa6.json  query-8fcebf6f2ffed840ed1eaf2963ffb0e66a3f6358e206c2d3abf048006c152c0f.json
config/: base.yml  docker.yml  local.yml  prod.yml
deploy/: do_postgres_perms.sql
deploy/digitalocean/: do_postgres_permissions.sql  do_spec.yaml
docker/: app.yml  postgres.yml  prodcast.Dockerfile  prodcast.yml  sqlx.Dockerfile
migrations/: 20250225013048_init.sql  20250225033144_create_subscriptions_table.sql
src/: lib.rs  main.rs
src/app/: lang.rs
src/config/: app.rs  database.rs
src/models/: mod.rs  newsletter.rs
src/repository/: newsletter.rs
src/routes/: api.rs  greet.rs  healthz.rs  mod.rs
src/service/: lang.rs  mod.rs  newsletter.rs
src/shapes/: models.rs
src/telemetry/: tracing.rs
tests/: healthz.rs  mutate.rs  shapes.rs  subscriptions.rs  tests_main.rs
tests/app/: lang_tests.rs
tests/common/: mod.rs  tests_utils.rs  utils.rs
tests/models/: mod.rs  shapes_tests.rs
tests/routes/: api_tests.rs
tests/service/: lang_tests.rs  mod.rs
