[package]
name = "prodcast"
version = "0.1.0"
edition = "2021"
authors = ["Anish Jayavant <anishjayavant@protonmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "prodcast"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
