[package]
name = "prodcast"
version = "0.1.0"
edition = "2021"
authors = ["Anish Jayavant <anishjayavant@protonmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "prodcast"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.11"
uuid = { version = "1.14.0", features = ["v4"] }
url = "2.5.4"
chrono = "0.4.39"
async-trait = "0.1.86"

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.12.12"
